# aiopvpc-ng

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  run_tests.yml
aiopvpc/: pvpc_tariff.py
aiopvpc_ng/: ha_helpers.py  parser.py  pvpc_data.py  utils.py
tests/: __init__.py  conftest.py  test_ha_helpers.py  test_pvpc.py  test_pvpc_parsing.py  test_pvpc_zones.py  test_real_api_calls.py  test_tariff_attributes.py
